Wed Dec  9 09:25:29 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/net/smtp/test_response.rb: use Test::Unit. We should use Test::Unit
	  without rubygems and rdoc.

Wed Dec  9 06:26:23 2015  Colin Kelley <colindkelley@gmail.com>

	* lib/uri/generic.rb: enable frozen_string_literal
	  (split_userinfo): remove explicit .freeze for string literals
	  (check_path): ditto
	  (query): ditto
	  (fragment): ditto
	  (to_s): ditto
	  [ruby-core:71910] [Bug #11759]

Wed Dec  9 06:25:47 2015  Eric Wong  <e@80x24.org>

	* test/uri/test_generic.rb (to_s): new test
	  [ruby-core:71820]

Wed Dec  9 02:18:52 2015  Koichi Sasada  <ko1@atdot.net>

	* compile.c (ibf_dump_memsize): should check NULL.

Wed Dec  9 01:46:35 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* string.c (rb_str_init): now accepts new option parameter `encoding'.
	  [Feature #11785]

Wed Dec  9 00:52:37 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_stat_wr, rb_stat_ww): call get_stat only once and
	  reduce checking struct.  patch by Yuki Kurihara in
	  [ruby-core:71949].  [Misc #11789]

Wed Dec  9 00:24:33 2015  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_ibf_dump): dump extra data just string length.

	* sample/iseq_loader.rb: add using
	  RubyVM::InstructionSequence.from_binary_format_extra_data method
	  (commented out).

Mon Dec  9 00:21:19 2015  Yuki Nishijima  <mail@yukinishijima.net>

	* gems/bundled_gems: Upgrade the did_you_mean gem to 1.0.0.rc1

Wed Dec  9 00:17:49 2015  Koichi Sasada  <ko1@atdot.net>

	* compile.c (ibf_load_setup): cast to int.

Wed Dec  9 00:13:09 2015  Koichi Sasada  <ko1@atdot.net>

	* compile.c (ibf_setup_load): rename to ibf_load_setup().

	* compile.c (iseq_load_setup): check binary format.

Tue Dec  8 23:30:07 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* test/io/console/test_io_console.rb (run_pty): Avoid waiting twice
	  for a process. Fix Errno::ECHILD in TestIO_Console#test_close and
	  TestIO_Console#test_sync.
